added sass folders, completed css reset

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,8 @@
-/* Reset */
+// bring in components only here 
+@import '../scss/abstracts/';
+@import '../scss/base/';
 
-body {
-    background-color: lightblue;
-}
+
+
+
+
