--- a/src/scss/abstracts/_fonts.scss
+++ b/src/scss/abstracts/_fonts.scss
@@ -1,1 +1,20 @@
-$font-size: 1.5rem;
+/* Font-sizes */
+$fs-900: 6rem; 
+$fs-800: 3rem; 
+$fs-700: 2.25rem;
+$fs-600: 2rem;
+$fs-500: 1.5rem; 
+$fs-400: 1.125rem; // body - 18px
+$fs-300: 1rem; 
+$fs-200: 0.875rem;
+
+/* Font-families */
+$ff-body: 'Quicksand', sans-serif;
+$ff-accent: 'Bangers', cursive;
+
+/* Font-weights */
+$fw-bold: 700;
+$fw-medium: 500;
+$fw-regular: 400;
+$fw-light: 300;
+
