added typography, flow, started interactive section

--- a/src/scss/abstracts/_fonts.scss
+++ b/src/scss/abstracts/_fonts.scss
@@ -9,12 +9,13 @@ $fs-300: 1rem;
 $fs-200: 0.875rem;
 
 /* Font-families */
+$ff-heading: 'Poppins', sans-serif;
 $ff-body: 'Quicksand', sans-serif;
 $ff-accent: 'Bangers', cursive;
 
 /* Font-weights */
-$fw-bold: 700;
-$fw-medium: 500;
-$fw-regular: 400;
-$fw-light: 300;
+$fw-700: 700;
+$fw-500: 500;
+$fw-400: 400;
+$fw-300: 300;
 
