--- a/src/scss/utilities/index.scss
+++ b/src/scss/utilities/index.scss
@@ -1,5 +1,5 @@
 @forward '../utilities/container';
 @forward '../utilities/flex';
+@forward '../utilities/flow';
 @forward '../utilities/grid';
 @forward '../utilities/sr-only';
-@forward '../utilities/spacer';
