added buttons, social bar

--- a/src/scss/abstracts/_fonts.scss
+++ b/src/scss/abstracts/_fonts.scss
@@ -15,7 +15,7 @@ $ff-accent: 'Bangers', cursive;
 
 /* Font-weights */
 $fw-700: 700;
-$fw-500: 500;
+$fw-500: 500; // medium
 $fw-400: 400;
-$fw-300: 300;
+$fw-300: 300; 
 
