--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -1,7 +1,7 @@
 /* Colors */
 $clr-black: hsl(0 0% 0%);
 $clr-white: hsl(0 0% 100%);
-$clr-logo: hsl(42 99% 58%);
+$clr-logo: hsl(42, 99%, 58%);
 
 /* Shages */
 $black-25: transparentize($clr-black, .25);
