--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,6 @@
-// bring in components only here 
-@import '../scss/abstracts/';
+// bring in folders only here 
+// @import '../scss/abstracts/';
 @import '../scss/base/';
 @import '../scss/utilities/';
-
+@import '../scss/components/';
 
