--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -3,7 +3,7 @@ $clr-black: hsl(0 0% 0%);
 $clr-white: hsl(0 0% 100%);
 $clr-logo: hsl(42, 99%, 58%);
 
-/* Shages */
+/* Shades */
 $black-25: transparentize($clr-black, .25);
 $white-25: transparentize($clr-white, .25);
 $logo-25: transparentize($clr-logo, .25);
@@ -21,7 +21,7 @@ $logo-75: transparentize($clr-logo, .75);
 .bg-white { background-color: $clr-white ; }
 .bg-logo { background-color: $clr-logo ; }
 
-/* Background shades */ 
+/* Background utility shades */ 
 .bg-black-50 { background-color: transparentize($clr-black, .5); }
 .bg-white-50 { background-color: transparentize($clr-white, .5); }
 .bg-logo-50 { background-color: transparentize($clr-logo, .5); }
@@ -31,7 +31,7 @@ $logo-75: transparentize($clr-logo, .75);
 .text-white { color: $clr-white; }
 .text-logo { color: $clr-logo; }
 
-/* Text shades */ 
+/* Text utility shades */ 
 .text-black-25 { color: transparentize($clr-black, .25); }
 .text-white-25 { color: transparentize($clr-white, .25); }
 .text-logo-25 { color: transparentize($clr-logo, .25); }
