--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -49,6 +49,7 @@ select {
 ul[class] {
     list-style: none;
     padding: 0;
+    margin: 0;
 }
 
 /* A elements that don't have a class get defautl styles */
